fix alignment?

--- a/web/ponder02/homestyle.css
+++ b/web/ponder02/homestyle.css
@@ -23,7 +23,7 @@ li {
 	float: left;
 }
 #flygon {
-	padding: 40px 0;
+	padding-top: 40px;
 	background: url('flygon.png') no-repeat;
 	height: 200px;
 	width: 200px;
